# copilot-llm-provider

./: .env.example  .gitignore  AGENTS.md  README.md  mcp.json  pyproject.toml
backend/app/: main.py  mcp_server.py
backend/app/api/: admin.py  sessions.py
backend/app/api/anthropic/: messages.py
backend/app/api/openai/: chat.py  models.py
backend/app/core/: auth.py  config.py  dependencies.py
backend/app/providers/: base.py  copilot.py
backend/app/schemas/: anthropic.py  openai.py
backend/app/services/: models.py  session_pool.py  session_store.py  token_pool.py  usage_tracker.py  user_store.py
backend/tests/: test_anthropic_messages.py  test_health.py  test_schemas.py
docs/: SUMMARY.md  copilot-sdk-patch-available-tools.md
frontend/: tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx
frontend/src/components/common/: CodeBlock.tsx  ModelSelector.tsx  StatusBadge.tsx
frontend/src/contexts/: AuthContext.tsx  I18nContext.tsx
frontend/src/hooks/: useModels.ts
frontend/src/pages/: ApiReferencePage.tsx  DashboardPage.tsx  LoginPage.tsx  PlaygroundPage.tsx  SessionsPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
src/backend/app/: main.py  mcp_server.py
src/backend/tests/: conftest.py  test_auth.py  test_openai_chat.py  test_openai_models.py  test_schemas.py
src/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/frontend/src/: App.tsx  index.css
(+37 files in other folders)
