[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-llm-provider"
version = "0.1.0"
description = "OpenAI/Anthropic-compatible LLM API server powered by GitHub Copilot"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "github-copilot-sdk>=0.1.32",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src/backend"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src/backend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.pytest.ini_options]
testpaths = ["src/backend/tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
